@@ -35,3 +35,23 @@ def applyEvent(argsList):
 
 def beginEvent(context, argsList = -1):
 	return getEventManager().beginEvent(context, argsList)
+
+def initAfterReload():
+	"""
+	Initialize BUG after reloading Python modules while game is still running.
+	
+	The first time this module is loaded after the game launches, the global context is not yet ready,
+	and thus BUG cannot be initialized. When the Python modules are reloaded after being changed, however,
+	this will reinitialize BUG and the main interface.
+	"""
+	import BugInit
+	if BugInit.init():
+		try:
+			import CvScreensInterface
+			CvScreensInterface.reinitMainInterface()
+		except:
+			import BugUtil
+			BugUtil.error("BugInit - failure rebuilding main interface after reloading Python modules")
+
+# initialize BUG after Python modules have been reloaded
+initAfterReload()
